# 3

./: .gitignore  .replit  ENV_DUZELTILDI.md  GITHUB_PUSH_REHBERI.md  GUVENLIK_UYARISI.md  PRODUCTION_READY_CHECKLIST.md  PRODUCTION_SETUP.md  SON ÖZET  SON_15_SAAT_CALISMA_OZETI.html  SON_15_SAAT_CALISMA_OZETI.txt  app.json  codemagic.yaml  package-lock.json  package.json  push-to-new-repo.sh  pyproject.toml  replit.md  tatus  test_chat_upload.py  test_server.py
.emergent/: emergent.yml
android/: settings.gradle
android/app/: build.gradle
backend/: .env  .env.example  env_example.txt  google_auth_service.py  package.json  server.py  test_server.py  test_smtp.py
frontend/: .dockerignore  .env  .env.example  .env.mobile  .env.mobile.example  .gitignore  BUILD_CHECKLIST.md  CREATE_ICONS.md  Dockerfile  GITHUB_VE_BUILD_REHBERI.md  IOS_ANDROID_BUILD_COZUM.md  README-MOBILE.md  START_HERE.md  WEB_VS_MOBILE.md  app.config.js  app.json  babel.config.js  docker-compose.yml  eas.json  expo.json  package-lock.json  package-mobile.json  package.json  quick-start.sh  setup-mobile.sh  tailwind.config-mobile.js  tsconfig.json
frontend/app/: _layout.js  index.js
frontend/app/(auth)/: forgot-password.tsx  forgot-pin.tsx  login.tsx  reset-password.tsx
frontend/app/(tabs)/: community.tsx  friends.tsx  index.tsx  profile.tsx
frontend/app/profile/: edit.tsx
frontend/assets/: .gitkeep
frontend/ios/: GoogleService-Info.plist
frontend/scripts/: patch-expo-router-podspec.cjs
frontend/src/components/: ADHDOnboarding.tsx  AdBanner.tsx  AssessmentFollowupContent.tsx  (+5 more)
(+13 files in other folders)
