[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
    "websocket>=0.2.1",
]
